Fix: wrong colors
Some colors were not applied. Fixed!

--- a/src/rating-result.scss
+++ b/src/rating-result.scss
@@ -29,11 +29,13 @@
 }
 
 .rating-result__result {
-  background-color: $less-dark-blue;
   @include flex-center;
   border-radius: 100vmax;
   padding-block: 0.5em;
   padding-inline: 1.25em;
+
+  background-color: $less-dark-blue;
+  color: $orange;
 }
 
 .rating-result__rating::after {
@@ -47,4 +49,5 @@
 
 .rating-result__message {
   text-align: center;
+  color: $medium-grey;
 }
